tests/ui/consts/miri_unleashed/const_refers_to_static_cross_crate.stderr
error[E0080]: constructing invalid value: encountered reference to mutable memory in `const`
  --> $DIR/const_refers_to_static_cross_crate.rs:13:1
   |
LL | const SLICE_MUT: &[u8; 1] = {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ it is undefined behavior to use this value
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: $SIZE, align: $ALIGN) {
               HEX_DUMP
           }

error[E0080]: constructing invalid value: encountered reference to mutable memory in `const`
  --> $DIR/const_refers_to_static_cross_crate.rs:18:1
   |
LL | const U8_MUT: &u8 = {
   | ^^^^^^^^^^^^^^^^^ it is undefined behavior to use this value
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: $SIZE, align: $ALIGN) {
               HEX_DUMP
           }

error[E0080]: constructing invalid value: encountered reference to mutable memory in `const`
  --> $DIR/const_refers_to_static_cross_crate.rs:24:1
   |
LL | const U8_MUT2: &u8 = {
   | ^^^^^^^^^^^^^^^^^^ it is undefined behavior to use this value
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: $SIZE, align: $ALIGN) {
               HEX_DUMP
           }

error[E0080]: constant accesses mutable global memory
  --> $DIR/const_refers_to_static_cross_crate.rs:30:15
   |
LL |         match static_cross_crate::OPT_ZERO {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `U8_MUT3` failed here

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0080`.
